--- a/platforma_dlya_naima/app/static/css/style.css
+++ b/platforma_dlya_naima/app/static/css/style.css
@@ -128,3 +128,123 @@ button:hover, input[type="submit"]:hover {
 .visible {
     display: block;
 }
+
+/* Стили для шапки сайта */
+header {
+  background-color: #007bff; /* Голубой цвет для шапки */
+  color: white;
+  padding: 10px 0;
+  width: 100%;
+}
+
+/* Стили для навигации */
+nav ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #007bff; /* Голубой цвет для навигации */
+}
+
+nav ul li {
+  float: left;
+}
+
+nav ul li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+nav ul li a:hover {
+  background-color: #0056b3; /* Темно-голубой цвет при наведении */
+}
+
+/* Стили для основного содержимого */
+main {
+  background-color: #f2f2f2; /* Светло-серый цвет для основного контента */
+  width: 80%;
+  margin: 20px auto;
+  padding: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+/* Стили для кнопок */
+.button-container {
+  text-align: center;
+}
+
+.button {
+  background-color: #007bff; /* Голубой цвет для кнопок */
+  color: #ffffff;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  font-size: 18px;
+  cursor: pointer;
+  margin: 10px;
+  transition: background-color 0.3s ease;
+}
+
+.button:hover {
+  background-color: #0056b3; /* Темно-голубой цвет при наведении */
+}
+
+/* Стили для подвала */
+footer {
+  background-color: #007bff; /* Голубой цвет для подвала */
+  color: white;
+  text-align: center;
+  padding: 10px 0;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+
+/* Стили для макета */
+
+/* Общие стили */
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
+/* Стили для шапки сайта */
+.site-header {
+    background-color: #646305;
+    color: #ffffff;
+    padding: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.logo img {
+    max-width: 100px;
+}
+
+.main-nav ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.main-nav ul li {
+    display: inline-block;
+    margin-right: 20px;
+}
+
+.main-nav ul li a {
+    color: #ffffff;
+    text-decoration: none;
+    transition: color 0.3s;
+}
+
+.main-nav ul li a:hover {
+    color: #0056b3;
+}
+
+  
