--- a/platforma_dlya_naima/app/templates/register.html
+++ b/platforma_dlya_naima/app/templates/register.html
@@ -1,12 +1,92 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <title>Регистрация</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-</head>
+    <!-- Basic -->
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <!-- Mobile Metas -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <!-- Site Metas -->
+    <meta name="keywords" content="" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+  
+    <title>SberКарьера</title>
+  
+    <!-- bootstrap core css -->
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+  
+    <link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet">
+    <!-- Custom styles for this template -->
+    <link href="css/style.css" rel="stylesheet" />
+    <!-- responsive style -->
+    <link href="css/responsive.css" rel="stylesheet" />
+  </head>
+
 <body>
-    <div class="container">
+    <div class="hero_area">
+        <!-- header section strats -->
+        <header class="header_section">
+            <div class="container-fluid">
+            <nav class="navbar navbar-expand-lg custom_nav-container">
+                <a class="navbar-brand" href="index.html">
+                <img src="images/logo.png" alt="" />
+                <span>
+                    SberКарьера
+                </span>
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                </button>
+    
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav  ">
+                    <li class="nav-item active">
+                    <a class="nav-link" href="index.html">Домой<span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="hr.html">HR</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="candidate.html">Кандидат</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="about.html">О нас</a>
+                    </li>
+                </ul>
+                <div class="user_option">
+                    <a href="register.html">
+                    <span>
+                        Логин
+                    </span>
+                    </a>
+                    <form class="form-inline my-2 my-lg-0 ml-0 ml-lg-4 mb-3 mb-lg-0">
+                    <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit"></button>
+                    </form>
+                </div>
+                </div>
+                <div>
+                <div class="custom_menu-btn ">
+                    <button>
+                    <span class=" s-1">
+    
+                    </span>
+                    <span class="s-2">
+    
+                    </span>
+                    <span class="s-3">
+    
+                    </span>
+                    </button>
+                </div>
+                </div>
+    
+            </nav>
+            </div>
+        </header>
+        <!-- end header section -->
+
         <h2>Регистрация</h2>
         <form action="" method="post">
             {{ form.hidden_tag() }}
