--- a/platforma_dlya_naima/app/templates/candidate.html
+++ b/platforma_dlya_naima/app/templates/candidate.html
@@ -1,52 +1,288 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Тесты для кандидата</title>
-<style>
-  body {
-    background-color: #ffffff;
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-  }
+    <!-- Basic -->
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <!-- Mobile Metas -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <!-- Site Metas -->
+    <meta name="keywords" content="" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+  
+    <title>SberКарьера</title>
+  
+    <!-- bootstrap core css -->
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+  
+    <link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet">
+    <!-- Custom styles for this template -->
+    <link href="css/style.css" rel="stylesheet" />
+    <!-- responsive style -->
+    <link href="css/responsive.css" rel="stylesheet" />
+  </head>
 
-  .test-container {
-    max-width: 600px;
-    margin: 50px auto;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-  }
-
-  .test {
-    margin-bottom: 10px;
-    padding: 10px;
-    background-color: #f0f0f0;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-  }
-
-  .test:hover {
-    background-color: #e0e0e0;
-  }
-</style>
-</head>
-<body>
-
-<div class="test-container">
-  <div class="test">
-    Тест по Git
-    <a href="candidate" class="button">Начать тест</a>
+<body class="sub_page">
+  <div class="hero_area">
+    <!-- header section strats -->
+    <header class="header_section">
+        <div class="container-fluid">
+          <nav class="navbar navbar-expand-lg custom_nav-container">
+            <a class="navbar-brand" href="index.html">
+              <img src="images/logo.png" alt="" />
+              <span>
+                SberКарьера
+              </span>
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+  
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav  ">
+                <li class="nav-item active">
+                  <a class="nav-link" href="index.html">Домой<span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="hr.html">HR</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="candidate.html">Кандидат</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="about.html">О нас</a>
+                </li>
+              </ul>
+              <div class="user_option">
+                <a href="register.html">
+                  <span>
+                    Логин
+                  </span>
+                </a>
+                <form class="form-inline my-2 my-lg-0 ml-0 ml-lg-4 mb-3 mb-lg-0">
+                  <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit"></button>
+                </form>
+              </div>
+            </div>
+            <div>
+              <div class="custom_menu-btn ">
+                <button>
+                  <span class=" s-1">
+  
+                  </span>
+                  <span class="s-2">
+  
+                  </span>
+                  <span class="s-3">
+  
+                  </span>
+                </button>
+              </div>
+            </div>
+  
+          </nav>
+        </div>
+      </header>
+      <!-- end header section -->
   </div>
-  <div class="test">
-    Тест по Python
-    <a href="candidate" class="button">Начать тест</a>
-  </div>
-  <!-- Добавьте другие тесты по желанию -->
-</div>
+
+
+  <!-- freelance section -->
+
+  <section class="freelance_section layout_padding">
+    <div id="accordion">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-md-5 offset-md-1">
+            <div class="detail-box">
+              <div class="heading_container">
+                <h2>
+                  Выберите действие
+                </h2>
+              </div>
+              <div class="tab_container">
+                <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                  <div class="img-box">
+                    <img src="images/plus.png" alt="">
+                  </div>
+                  <div class="detail-box">
+                    <h5>
+                      Загрузить резюме
+                    </h5>
+                    <h3>
+                      Загрузите свое резюме в формате PDF или doc и мы подберем Вам подходящие вакансии.
+                    </h3>
+                    <!-- Поле для загрузки файла -->
+                    <input type="file" name="resume" accept=".pdf, .doc, .docx">
+
+                    <script>
+                      document.addEventListener('DOMContentLoaded', function() {
+                        var fileInput = document.querySelector('input[type="file"][name="resume"]');
+                        fileInput.addEventListener('change', function(event) {
+                          if (event.target.files.length > 0) {
+                            // Файл выбран, перенаправляем пользователя
+                            window.location.href = 'test.html';
+                          }
+                        });
+                      });
+                    </script>
+                    
+                  </div>
+                </div>
+                <div class="t-link-box collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                  <div class="img-box">
+                    <img src="images/test.png" alt="">
+                  </div>
+                  <div class="detail-box">
+                    <h5>
+                      Создать резюме
+                    </h5>
+                    <h3>
+                      Вы можете создать свое резюме заполнив форму.
+                    </h3>
+                    <!-- Кнопка "Заполнить форму" -->
+                    <button type="button" onclick="location.href='form_page.html'">Заполнить форму</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="collapse show" id="collapseOne" aria-labelledby="headingOne" data-parent="#accordion">
+              <div class="img-box">
+                <img src="images/freelance-img.jpg" alt="">
+              </div>
+            </div>
+            <div class="collapse" id="collapseTwo" aria-labelledby="headingTwo" data-parent="#accordion">
+              <div class="img-box">
+                <img src="images/freelance-img.jpg" alt="">
+              </div>
+            </div>
+            <div class="collapse" id="collapseThree" aria-labelledby="headingThree" data-parent="#accordion">
+              <div class="img-box">
+                <img src="images/freelance-img.jpg" alt="">
+              </div>
+            </div>
+            <div class="collapse" id="collapseFour" aria-labelledby="headingfour" data-parent="#accordion">
+              <div class="img-box">
+                <img src="images/freelance-img.jpg" alt="">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- end freelance section -->
+
+  <!-- info section -->
+
+  <section class="info_section ">
+    <div class="info_container layout_padding-top">
+      <div class="container">
+        <div class="info_top">
+          <div class="info_logo">
+            <img src="images/logo.png" alt="" />
+            <span>
+              SberКарьера
+            </span>
+          </div>
+        </div>
+
+        <div class="info_main">
+          <div class="row">
+            <div class="col-md-3 col-lg-2">
+              <div class="info_link-box">
+                <h5>
+                  Навигация
+                </h5>
+                <ul>
+                  <li class=" active">
+                    <a class="" href="index.html">Домой <span class="sr-only">(current)</span></a>
+                  </li>
+                  <li class="">
+                    <a class="" href="hr.html">Для HR</a>
+                  </li>
+                  <li class="">
+                    <a class="" href="candidate.html">Для кандидат</a>
+                  </li>
+                  <li class="">
+                    <a class="" href="about.html">О нас</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="col-md-3 ">
+              <h5>
+                Тестовая верисия страницы
+              </h5>
+              <p>
+                Сайт выполнен в рамках хакатона. Некоторые функции могут отсутствовать.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-9 col-md-10 mx-auto">
+            <div class="info_contact layout_padding2">
+              <div class="row">
+                <div class="col-md-3">
+                  <a href="#" class="link-box">
+                    <div class="img-box">
+                      <img src="images/location.png" alt="">
+                    </div>
+                    <div class="detail-box">
+                      <h6>
+                        Офис
+                      </h6>
+                    </div>
+                  </a>
+                </div>
+                <div class="col-md-4">
+                  <a href="#" class="link-box">
+                    <div class="img-box">
+                      <img src="images/mail.png" alt="">
+                    </div>
+                    <div class="detail-box">
+                      <h6>
+                        demo@gmail.com
+                      </h6>
+                    </div>
+                  </a>
+                </div>
+                <div class="col-md-5">
+                  <a href="#" class="link-box">
+                    <div class="img-box">
+                      <img src="images/call.png" alt="">
+                    </div>
+                    <div class="detail-box">
+                      <h6>
+                        Call +7 999 999 99 99
+                      </h6>
+                    </div>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </section>
+
+  <!-- end info section -->
+
+  <script src="js/jquery-3.4.1.min.js"></script>
+  <script src="js/bootstrap.js"></script>
+  <script src="js/custom.js"></script>
+
+
 
 </body>
+</body>
+
 </html>
