--- a/platforma_dlya_naima/app/templates/hr.html
+++ b/platforma_dlya_naima/app/templates/hr.html
@@ -56,7 +56,7 @@
                 </li>
               </ul>
               <div class="user_option">
-                <a href="register.html">
+                <a href="login.html">
                   <span>
                     Логин
                   </span>
@@ -112,7 +112,7 @@
                       Создать вакансию
                     </h5>
                     <h3>
-                      Опишите навыки и опыт желаемого сотрудника и мы подберем вам подходящих
+                      Опишите навыки и опыт желаемого сотрудника и мы подберем вам подходящих кандидатов.
                     </h3>
                   </div>
                 </div>
@@ -125,8 +125,11 @@
                       Создать тест
                     </h5>
                     <h3>
-                      Вы получите заданное число вопросов по выбранной теме
+                      Вы получите заданное число вопросов по выбранной теме.
                     </h3>
+                    <!-- Поля для выбора темы и введения количества вопросов -->
+                    <input type="text" placeholder="Выберите тему">
+                    <input type="number" placeholder="Количество вопросов">
                   </div>
                 </div>
               </div>
