--- a/platforma_dlya_naima/app/templates/index.html
+++ b/platforma_dlya_naima/app/templates/index.html
@@ -56,7 +56,7 @@
               </li>
             </ul>
             <div class="user_option">
-              <a href="register.html">
+              <a href="login.html">
                 <span>
                   Логин
                 </span>
