--- a/platforma_dlya_naima/app/templates/login.html
+++ b/platforma_dlya_naima/app/templates/login.html
@@ -1,19 +1,100 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <title>Вход в систему</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-</head>
+    <!-- Basic -->
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <!-- Mobile Metas -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <!-- Site Metas -->
+    <meta name="keywords" content="" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+  
+    <title>SberКарьера</title>
+  
+    <!-- bootstrap core css -->
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+  
+    <link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet">
+    <!-- Custom styles for this template -->
+    <link href="css/style.css" rel="stylesheet" />
+    <!-- responsive style -->
+    <link href="css/responsive.css" rel="stylesheet" />
+  </head>
+
 <body>
-    <div class="login-container">
-        <h2>Вход в систему</h2>
+    <div class="hero_area">
+        <!-- header section strats -->
+        <header class="header_section">
+            <div class="container-fluid">
+            <nav class="navbar navbar-expand-lg custom_nav-container">
+                <a class="navbar-brand" href="index.html">
+                <img src="images/logo.png" alt="" />
+                <span>
+                    SberКарьера
+                </span>
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                </button>
+    
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav  ">
+                    <li class="nav-item active">
+                    <a class="nav-link" href="index.html">Домой<span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="hr.html">HR</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="candidate.html">Кандидат</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="about.html">О нас</a>
+                    </li>
+                </ul>
+                <div class="user_option">
+                    <a href="register.html">
+                    <span>
+                        Логин
+                    </span>
+                    </a>
+                    <form class="form-inline my-2 my-lg-0 ml-0 ml-lg-4 mb-3 mb-lg-0">
+                    <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit"></button>
+                    </form>
+                </div>
+                </div>
+                <div>
+                <div class="custom_menu-btn ">
+                    <button>
+                    <span class=" s-1">
+    
+                    </span>
+                    <span class="s-2">
+    
+                    </span>
+                    <span class="s-3">
+    
+                    </span>
+                    </button>
+                </div>
+                </div>
+    
+            </nav>
+            </div>
+        </header>
+        <!-- end header section -->
+        <!-- register section -->
+        
+        
         <form action="" method="post">
-            {{ form.csrf_token }}
             {{ form.hidden_tag() }}
+            {{ form.csrf_token }}
             <div class="form-group">
                 <label for="email">Электронная почта</label>
-                {{ form.email(size=32, class_='form-control') }}
+                {{ form.email(size=32, class_="form-control") }}
                 {% if form.email.errors %}
                     <ul class="errors">
                         {% for error in form.email.errors %}
@@ -24,7 +105,7 @@
             </div>
             <div class="form-group">
                 <label for="password">Пароль</label>
-                {{ form.password(size=32, class_='form-control') }}
+                {{ form.password(size=32, class_="form-control") }}
                 {% if form.password.errors %}
                     <ul class="errors">
                         {% for error in form.password.errors %}
@@ -34,10 +115,120 @@
                 {% endif %}
             </div>
             <div class="form-group">
-                <button type="submit" class="btn btn-primary">Войти</button>
+                <label for="confirm">Подтверждение пароля</label>
+                {{ form.confirm(size=32, class_="form-control") }}
+                {% if form.confirm.errors %}
+                    <ul class="errors">
+                        {% for error in form.confirm.errors %}
+                            <li>{{ error }}</li>
+                        {% endfor %}
+                    </ul>
+                {% endif %}
+            </div>
+            <div class="form-group">
+                <button type="submit" class="btn btn-primary">Зарегистрироваться</button>
             </div>
         </form>
-        <div>Нет аккаунта? <a href="{{ url_for('register') }}">Зарегистрируйтесь</a></div>
+
+        <!-- end register section -->
     </div>
+
+    <!-- info section -->
+
+    <section class="info_section ">
+        <div class="info_container layout_padding-top">
+        <div class="container">
+            <div class="info_top">
+            <div class="info_logo">
+                <img src="images/logo.png" alt="" />
+                <span>
+                SberКарьера
+                </span>
+            </div>
+            </div>
+
+            <div class="info_main">
+            <div class="row">
+                <div class="col-md-3 col-lg-2">
+                <div class="info_link-box">
+                    <h5>
+                    Навигация
+                    </h5>
+                    <ul>
+                    <li class=" active">
+                        <a class="" href="index.html">Домой <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="">
+                        <a class="" href="hr.html">Для HR</a>
+                    </li>
+                    <li class="">
+                        <a class="" href="candidate.html">Для кандидат</a>
+                    </li>
+                    <li class="">
+                        <a class="" href="about.html">О нас</a>
+                    </li>
+                    </ul>
+                </div>
+                </div>
+                <div class="col-md-3 ">
+                <h5>
+                    Тестовая верисия страницы
+                </h5>
+                <p>
+                    Сайт выполнен в рамках хакатона. Некоторые функции могут отсутствовать.
+                </p>
+                </div>
+            </div>
+            </div>
+            <div class="row">
+            <div class="col-lg-9 col-md-10 mx-auto">
+                <div class="info_contact layout_padding2">
+                <div class="row">
+                    <div class="col-md-3">
+                    <a href="#" class="link-box">
+                        <div class="img-box">
+                        <img src="images/location.png" alt="">
+                        </div>
+                        <div class="detail-box">
+                        <h6>
+                            Офис
+                        </h6>
+                        </div>
+                    </a>
+                    </div>
+                    <div class="col-md-4">
+                    <a href="#" class="link-box">
+                        <div class="img-box">
+                        <img src="images/mail.png" alt="">
+                        </div>
+                        <div class="detail-box">
+                        <h6>
+                            demo@gmail.com
+                        </h6>
+                        </div>
+                    </a>
+                    </div>
+                    <div class="col-md-5">
+                    <a href="#" class="link-box">
+                        <div class="img-box">
+                        <img src="images/call.png" alt="">
+                        </div>
+                        <div class="detail-box">
+                        <h6>
+                            Call +7 999 999 99 99
+                        </h6>
+                        </div>
+                    </a>
+                    </div>
+                </div>
+                </div>
+            </div>
+            </div>
+
+        </div>
+        </div>
+    </section>
+
+    <!-- end info section -->
 </body>
 </html>
