--- a/platforma_dlya_naima/app/templates/index.html
+++ b/platforma_dlya_naima/app/templates/index.html
@@ -15,13 +15,13 @@
   <title>SberКарьера</title>
 
   <!-- bootstrap core css -->
-  <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.css') }}" />
 
   <link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet">
   <!-- Custom styles for this template -->
-  <link href="css/style.css" rel="stylesheet" />
+  <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet" />
   <!-- responsive style -->
-  <link href="css/responsive.css" rel="stylesheet" />
+  <link href="{{ url_for('static', filename='css/responsive.css') }}" rel="stylesheet" />
 </head>
 
 <body>
@@ -30,8 +30,8 @@
     <header class="header_section">
       <div class="container-fluid">
         <nav class="navbar navbar-expand-lg custom_nav-container">
-          <a class="navbar-brand" href="index.html">
-            <img src="images/logo.png" alt="" />
+          <a class="navbar-brand" href="">
+            <img src="{{ url_for('static', filename='images/logo.png') }}" alt="" />
             <span>
               SberКарьера
             </span>
@@ -43,27 +43,27 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav  ">
               <li class="nav-item active">
-                <a class="nav-link" href="index.html">Домой<span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="">Домой<span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="hr.html">HR</a>
+                <a class="nav-link" href="hr">HR</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="candidate.html">Кандидат</a>
+                <a class="nav-link" href="candidate">Кандидат</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about.html">О нас</a>
+                <a class="nav-link" href="about">О нас</a>
               </li>
             </ul>
             <div class="user_option">
-              <a href="login.html">
-                <span>
-                  Логин
-                </span>
-              </a>
-              <form class="form-inline my-2 my-lg-0 ml-0 ml-lg-4 mb-3 mb-lg-0">
-                <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit"></button>
-              </form>
+<!--              <a href="login.html">-->
+<!--                <span>-->
+<!--                  Логин-->
+<!--                </span>-->
+<!--              </a>-->
+<!--              <form class="form-inline my-2 my-lg-0 ml-0 ml-lg-4 mb-3 mb-lg-0">-->
+<!--                <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit"></button>-->
+<!--              </form>-->
             </div>
           </div>
           <div>
@@ -89,12 +89,12 @@
     <!-- slider section -->
     <section class="slider_section ">
       <div class="carousel_btn-container">
-        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-          <span class="sr-only">Предыдущий слайд</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-          <span class="sr-only">Следующий слайд</span>
-        </a>
+<!--        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">-->
+<!--          <span class="sr-only">Предыдущий слайд</span>-->
+<!--        </a>-->
+<!--        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">-->
+<!--          <span class="sr-only">Следующий слайд</span>-->
+<!--        </a>-->
       </div>
       <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
@@ -116,10 +116,10 @@
                       Мы предоставляем набор инструментов на основе искусственного интеллекта для прохождения собеседования, подбора кандидатов, удобного взаимодействия. Выберите свою роль чтобы продолжить.
                     </p>
                     <div class="btn-box">
-                      <a href="hr.html" class="btn-1">
+                      <a href="hr" class="btn-1">
                         Я HR
                       </a>
-                      <a href="candidate.html" class="btn-2">
+                      <a href="candidate" class="btn-2">
                         Я кандидат
                       </a>
                     </div>
@@ -127,7 +127,7 @@
                 </div>
                 <div class="offset-md-1 col-md-5 img-container">
                   <div class="img-box">
-                    <img src="images/experience-img.png" alt="">
+                    <img src="{{ url_for('static', filename='images/experience-img.png') }}" alt="">
                   </div>
                 </div>
               </div>
@@ -147,7 +147,7 @@
       <div class="container">
         <div class="info_top">
           <div class="info_logo">
-            <img src="images/logo.png" alt="" />
+            <img src="{{ url_for('static', filename='images/logo.png') }}" alt="" />
             <span>
               SberКарьера
             </span>
@@ -163,16 +163,16 @@
                 </h5>
                 <ul>
                   <li class=" active">
-                    <a class="" href="index.html">Домой <span class="sr-only">(current)</span></a>
+                    <a class="" href="">Домой <span class="sr-only">(current)</span></a>
                   </li>
                   <li class="">
-                    <a class="" href="hr.html">Для HR</a>
+                    <a class="" href="hr">Для HR</a>
                   </li>
                   <li class="">
-                    <a class="" href="candidate.html">Для кандидат</a>
+                    <a class="" href="candidate">Для кандидатов</a>
                   </li>
                   <li class="">
-                    <a class="" href="about.html">О нас</a>
+                    <a class="" href="about">О нас</a>
                   </li>
                 </ul>
               </div>
@@ -194,7 +194,7 @@
                 <div class="col-md-3">
                   <a href="#" class="link-box">
                     <div class="img-box">
-                      <img src="images/location.png" alt="">
+                      <img src="{{ url_for('static', filename='images/location.png') }}" alt="">
                     </div>
                     <div class="detail-box">
                       <h6>
@@ -206,7 +206,7 @@
                 <div class="col-md-4">
                   <a href="#" class="link-box">
                     <div class="img-box">
-                      <img src="images/mail.png" alt="">
+                      <img src="{{ url_for('static', filename='images/mail.png') }}" alt="">
                     </div>
                     <div class="detail-box">
                       <h6>
@@ -218,7 +218,7 @@
                 <div class="col-md-5">
                   <a href="#" class="link-box">
                     <div class="img-box">
-                      <img src="images/call.png" alt="">
+                      <img src="{{ url_for('static', filename='images/call.png') }}" alt="">
                     </div>
                     <div class="detail-box">
                       <h6>
@@ -238,11 +238,10 @@
 
   <!-- end info section -->
 
-  <script src="js/jquery-3.4.1.min.js"></script>
-  <script src="js/bootstrap.js"></script>
-  <script src="js/custom.js"></script>
+  <script src="{{ url_for('static', filename='js/jquery-3.4.1.min.js') }}"></script>
+  <script src="{{ url_for('static', filename='js/bootstrap.js') }}"></script>
+  <script src="{{ url_for('static', filename='js/custom.js') }}"></script>
 
-</body>
 </body>
 
 </html>
