add create test page

--- a/platforma_dlya_naima/app/templates/create_test.html
+++ b/platforma_dlya_naima/app/templates/create_test.html
@@ -5,6 +5,21 @@
     <title>Title</title>
 </head>
 <body>
+    <h2>{{ test_data.name }}</h2>
+    <ul>
+        {% for example in test_data.data %}
+        <li>
+            <p>Вопрос: {{ example.question }}</p>
+            <p>Ответ: {{ example.true_answer }}</p>
+        </li>
+        {% endfor %}
 
+    </ul>
+    <div>
+        <button>Добавить вопрос</button>
+    </div>
+    <div>
+        <a href="">Сохранить тест</a>
+    </div>
 </body>
 </html>
