--- a/platforma_dlya_naima/app/templates/hr.html
+++ b/platforma_dlya_naima/app/templates/hr.html
@@ -118,8 +118,9 @@
                       Вы получите заданное число вопросов по выбранной теме.
                     </h3>
                     <!-- Поля для выбора темы и введения количества вопросов -->
-                    <input type="text" placeholder="Выберите тему">
-                    <input type="number" placeholder="Количество вопросов">
+                    <input id="themeInput" type="text" placeholder="Выберите тему">
+                    <input id="questionCountInput" type="number" placeholder="Количество вопросов">
+                    <button onclick="createTest()">Создать тест</button>
                   </div>
                 </div>
               </div>
@@ -151,6 +152,20 @@
       </div>
     </div>
   </section>
+
+  <script>
+    function createTest() {
+      // Получаем значения из полей ввода
+      var theme = document.getElementById("themeInput").value;
+      var questionCount = document.getElementById("questionCountInput").value;
+      
+      // Формируем URL с параметрами запроса
+      var url = "/hr/test/?theme=" + encodeURIComponent(theme) + "&questionCount=" + encodeURIComponent(questionCount);
+      
+      // Переходим на новую страницу
+      window.location.href = url;
+    }
+  </script>
 
   <!-- end freelance section -->
 
